pythonpg1
dl309@soetcse:~$ subl
dl309@soetcse:~$ mkdir lekhana
dl309@soetcse:~$ cd lekhana
dl309@soetcse:~/lekhana$ python3
Python 3.6.5 (default, Apr  1 2018, 05:46:30) 
[GCC 7.3.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> a=39
>>> b=67
>>> c=a=b
>>> print(c)
67
>>> a=34
>>> b=45
>>> c=b-a
>>> print(c)
11
>>> 
>>> a=45
>>> b=28
>>> c=a-b/2
>>> print(c)
31.0
>>> a=45
>>> b=67
>>> c=33
>>> d=a+b-c*2
>>> print(c)
33
>>> print(d)
46
>>> a=4**
  File "<stdin>", line 1
    a=4**
        ^
SyntaxError: invalid syntax
>>> a=4*5843
>>> a=45
>>> b=5843
>>> c=a*b
>>> print(c)
262935
>>> exit()
dl309@soetcse:~/lekhana$ python3 add.py
enter value of a67
enter value of b57
124


